# airflow-provider-tecton

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  dockerfile  pyproject.toml  setup.cfg
tecton_provider/: __init__.py
tecton_provider/example_dags/: example_tecton.py  example_tecton_feature_table_ingest.py  example_tecton_ingest.py  example_tecton_job.py  example_tecton_materialization.py  example_tecton_sensor.py  example_tecton_trigger_materialization.py
tecton_provider/operators/: df_utils.py  extra_links.py  job_utils.py  tecton_feature_table_ingest_operator.py  tecton_feature_table_job_operator.py  tecton_feature_table_trigger_operator.py  tecton_featurea_table_trigger_ingest_operator.py  tecton_job_operator.py  tecton_materialization_operator.py  tecton_trigger_materialization_operator.py  tecton_trigger_operator.py
tecton_provider/sensors/: tecton_sensor.py
tests/hooks/: test_tecton_hook.py
tests/operators/: test_tecton_feature_table_ingest_operator.py  test_tecton_feature_table_job_operator.py  test_tecton_feature_table_trigger_operator.py  test_tecton_job_operator.py  test_tecton_materialization_operator.py  test_tecton_trigger_operator.py
tests/sensors/: test_tecton_sensor.py
