[metadata]
name = airflow-provider-tecton
version = attr: tecton_provider.__version__
url = https://github.com/tecton-ai/airflow-provider-tecton
author = Tecton
author_email = nacosta@tecton.ai
description = A Tecton provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Apache Airflow
    Framework :: Apache Airflow :: Provider
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source Code=https://github.com/tecton-ai/airflow-provider-tecton
    Changelog=https://github.com/tecton-ai/airflow-provider-tecton/blob/main/CHANGELOG.md
    Bug Tracker = https://github.com/tecton-ai/airflow-provider-tecton/issues

[options]
python_requires = >=3.7
packages = find_namespace:
include_package_data = true
install_requires =
    apache-airflow>=2.0
    fastparquet
    pandas
    pyarrow
    requests


[options.extras_require]
tests =
    mypy
    types-requests
    parameterized
    pytest
    pytest-asyncio
    pytest-cov
    requests_mock

[options.entry_points]
apache_airflow_provider=
  provider_info=tecton_provider.__init__:get_provider_info

